
     Special Key combinations:
     - ALT+Mute clears all mutes
     - ALT+Solo clears all solos

   o added Robotizer Fx from Borfo

   o added LCD Screensaver.
     It will be active after 30 minutes by default.
     The time can be changed in the UTIL->OPT menu page.

   o added DETENTED4/DETENTED5 option for rotary encoders in MBSEQ_HW.V4 file

   o added new parameter layer "Nth" which triggers a special action on each nth bar.
     Following trigger conditions are available:
     - Pl (Play each nth bar)
     - Mu (Mute each nth bar)
     - Ac (Accent each nth bar)
     - Ro (Roll each nth bar)
     - Fx (enable Fx each nth bar)
     - Nx (don't enable Fx each nth bar)


MIDIboxSEQ V4.087
~~~~~~~~~~~~~~~~~

   o new page: "Track Instrument"
     Can be selected with MENU->EVNT->Trk Inst (GP #8) or from the main page (after Track Event item)
     Allows to configure the MIDI port, channel and instrument name.

   o the new Track Instrument page also allows to select Program Change and Bank (Low/High byte)
     If activated, these parameters will be sent when the sequencer is started and on pattern changes.
     Please note: a program and bank change can stall your synth so that the first note could be delayed!
     Use this function only when the device can handle patch changes quickly!

   o added CV_GATE_SR1 and CLK_SR to MBSEQ_HW.V4 config
     This is the prefered option to add CV gates and DIN clock/start signals to your MIDIbox SEQ in future.
     See also updated http://www.ucapps.de/midibox_seq_manual_hw.html

   o 8 individual DIN Sync clock outputs with individual divider and pulsewidth values are
     provided now. A clock output can optionally be turned to a Start/Stop output.
     The outputs are available at the configured CLK_SR DOUT shift register pin D7..D0
     (D7=first output, D6=second output, etc...)
     The clock parameters can be configured in the CV configuration page.
